Set up test reporting and notification
Several changes here:
- Add dependencies and configs to output in junit format
- Add scripts to parse junit results and send notifications
- Update directions in README
- Include empty component files to help guide fellows and also to ensure that all tests run and appear as fails in junit report

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,10 @@ jobs:
           at: "."
 
       - run: npm run test
+      - run:
+          name: Notify Test Results
+          command: node ./scripts/parseJunit.js
+          when: always
 
 workflows:
   version: 2
